k8s/testnodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-ext
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: simple-deployment-app
